Fix row wrap issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ body {
 }
 
 a {
-    color: var(--chakra-colors-gray-600) !important;
+    color: var(--chakra-colors-gray-600);
 
     &:hover {
         text-decoration: underline;
